--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -16,6 +16,79 @@
 
   <div id="invoice-template" style="display:none;"></div>
 
+  <script src="script.js"></script>
+</body>
+</html> -->
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>RCM Invoice Generator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Aptos&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="controls">
+    <h1>RCM Invoice Generator</h1>
+    <input type="file" id="excelFile" accept=".xlsx" />
+    <button onclick="generateInvoices()">Generate Invoices</button>
+  </div>
+
+  <div id="invoice-template" style="display:none;"></div>
+
+  <script src="script.js"></script>
+</body>
+</html> -->
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RCM Invoice Generator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+</head>
+<body>
+  <div class="controls">
+    <h1>RCM Invoice Generator</h1>
+    <input type="file" id="excelFile" accept=".xlsx, .xls" />
+    <button onclick="generateInvoices()">Generate Invoices</button>
+  </div>
+
+  <div id="invoice-template" style="display:none;"></div>
+
+  <script src="script.js"></script>
+</body>
+</html> -->
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RCM Invoice Generator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+</head>
+<body>
+  <div class="controls">
+    <h1>RCM Invoice Generator</h1>
+    <input type="file" id="excelFile" accept=".xlsx, .xls" />
+    <button onclick="generateInvoices()">Generate Invoices</button>
+  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
