--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <input type="file" id="excelFile" accept=".xlsx, .xls" />
     <button onclick="generateInvoices()">Generate Invoices</button>
   </div>
-  
+
+  <p><center>Build by Raghav Kapoor & Lakshya Goel</center></p>
+  <p><center>All Rights Reserved 2025</center></p>
+
+
   <script src="script.js"></script>
 </body>
 </html>
